# cityarray-sdk

./: README.md  city_data.py  demo.py  scenarios.py  venues.py
cityarray-sdk-v2/: .gitignore  README.md  pyproject.toml
cityarray-sdk-v2/examples/: demo_security.py  demo_simulator.py
cityarray-sdk-v2/src/cityarray/: __init__.py  sdk.py
cityarray-sdk-v2/src/cityarray/display/: __init__.py  led_simulator.py  secure_engine.py  simulator_backend.py
cityarray-sdk-v2/src/cityarray/security/: __init__.py  audit.py  keys.py  signing.py  tiers.py
cityarray-sdk-v2/tests/: test_security.py
docs/: CITYARRAY_Elevator_Pitches.md  CITYARRAY_Pricing_Guide.md  CITYARRAY_Security_Design.docx  CITYARRAY_Sovereign_AI_Analysis.docx  FILE_WORKFLOW.md  SOVEREIGN_SDK.md  activity.md
docs/cities/: CITYARRAY_City_Overview.md  CITYARRAY_Sovereign_Architecture.md
docs/festivals/: CITYARRAY_Festival_Overview.md
docs/memory/: CITY_TRACK.md  FESTIVAL_TRACK.md  PROJECT_MEMORY.md
docs/prompts/: 01-session-kickoff.md  02-session-closeout.md  03-project-memory-update.md  07-architecture-proposal.md  08-adr-writer.md  10-red-team-review.md  11-code-spec-review.md  12-test-plan.md  README.md
docs/sessions/: README.md  SESSION_LOG_TEMPLATE.md
docs/shared/: CITYARRAY_Benefits_Sheet.md  CITYARRAY_Benefits_Sheet_v2.md
pi/: README.md  TECH_STACK.md  agent.py  agent_hailo.py  audio.py  city_data.py  database.py  demo.py  demo_audio.py  demo_full.py  detect.py  hailo_detect.py  hybrid_detect.py  led_simulator.py  query.py  reasoning.py  scenarios.py  templates.py  venues.py  vlm_detect.py  voice_assistant.py  voice_input.py
tasks/: todo.md
